--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "adguard-hostlists",
+  "name": "adguard-hostlists-registry",
   "version": "1.0.0",
-  "description": "AdGuard Hostlists Registry",
+  "description": "Hostlists Registry",
   "main": "index.js"
 }
