--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "name": "adguard-hostlists-registry",
   "version": "1.0.0",
   "description": "Hostlists Registry",
-  "main": "index.js"
+  "main": "index.js",
+  "dependencies": {
+    "adguard-hostlists-builder": "./hostlists-builder/"
+  }
 }
