--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,6 +2,12 @@ name: Build Hostlists Registry
 
 on:
   push
+  workflow_dispatch:
+    inputs:
+      name:
+        description: 'Log level'     
+        required: true
+        default: 'warning'
 
 jobs:
   build:
