--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,12 +2,10 @@ name: Build Hostlists Registry
 
 on:
   push:
-  workflow_dispatch:
-    inputs:
-      name:
-        description: 'Log level'     
-        required: true
-        default: 'warning'
+    branches:
+      main
+  schedule:
+    - cron:  '0 * * * *'  
 
 jobs:
   build:
@@ -32,3 +30,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}          
           branch: 'initial'
+          message: 'build from ${date}'
