--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -5,7 +5,7 @@ on:
     branches:
       main
   schedule:
-    - cron:  '0 * * * *'  
+    - cron:  '0 * * * *'
 
 jobs:
   build:
@@ -24,10 +24,10 @@ jobs:
       - name: node
         run: |
           TLS=insecure node index.js
-      
+
       - name: Commit & Push changes
         uses: actions-js/push@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}          
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: 'initial'
-          message: 'build from ${date}'
+          message: 'build from $(date)'
