--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -30,4 +30,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: 'initial'
-          message: 'build from $(date)'
+          message: 'build from ${timestamp}'
