--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -30,5 +30,5 @@ jobs:
         uses: actions-js/push@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: 'initial'
+          branch: 'main'
           message: 'build from ${timestamp}'
