--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -31,4 +31,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: "main"
-          message: "Auto-build"
+          message: "skip ci: auto-build"
