--- a/filters/general/filter_3_PeterLoweFilter/configuration.json
+++ b/filters/general/filter_3_PeterLoweFilter/configuration.json
@@ -1,10 +1,10 @@
 {
-  "name": "Peter Lowe's List",
+  "name": "Peter Lowe's Blocklist",
   "description": "Filter that blocks ads, trackers, and other nasty things.",
   "homepage": "https://pgl.yoyo.org/adservers/",
   "sources": [
     {
-      "name": "Peter Lowe's List",
+      "name": "Peter Lowe's Blocklist",
       "source": "https://pgl.yoyo.org/adservers/serverlist.php?hostformat=adblockplus&showintro=1&mimetype=plaintext",
       "type": "adblock",
       "transformations": [
