--- a/filters/security/filter_11_OnlineMaliciousURLBlocklist/configuration.json
+++ b/filters/security/filter_11_OnlineMaliciousURLBlocklist/configuration.json
@@ -1,11 +1,11 @@
 {
-  "name": "Online Malicious URL Blocklist",
+  "name": "Malicious URL Blocklist (URLHaus)",
   "description": "A blocklist of malicious websites that are being used for malware distribution, based on the Database dump of Abuse.ch URLhaus.",
-  "homepage": "https://gitlab.com/curben/urlhaus-filter",
+  "homepage": "https://gitlab.com/malware-filter/urlhaus-filter",
   "sources": [
     {
       "name": "Online Malicious URL Blocklist",
-      "source": "https://curben.gitlab.io/malware-filter/urlhaus-filter-agh-online.txt",
+      "source": "https://malware-filter.gitlab.io/malware-filter/urlhaus-filter-agh.txt",
       "type": "adblock",
       "transformations": [
         "RemoveModifiers",
