Edited hostlists descriptions
Tried to bring the descriptions to a single model

--- a/filters/general/filter_24_1Hosts_Lite/configuration.json
+++ b/filters/general/filter_24_1Hosts_Lite/configuration.json
@@ -1,6 +1,6 @@
 {
   "name": "1Hosts (Lite)",
-  "description": "Safeguard your device(s) against pesky ads, trackers, and malware.",
+  "description": "List for blocking pesky ads, trackers, and malware",
   "homepage": "https://badmojr.github.io/1Hosts/",
   "sources": [
     {
