--- a/filters/general/filter_28_Energized_Spark/configuration.json
+++ b/filters/general/filter_28_Energized_Spark/configuration.json
@@ -1,6 +1,6 @@
 {
   "name": "Energized Spark",
-  "description": "A list of domains that serve ads, tracking scripts and malware from multiple reputable sources.",
+  "description": "List for blocking ads, tracking scripts and malware",
   "homepage": "https://energized.pro/",
   "sources": [
     {
