--- a/filters/general/filter_3_PeterLoweFilter/configuration.json
+++ b/filters/general/filter_3_PeterLoweFilter/configuration.json
@@ -1,6 +1,6 @@
 {
   "name": "Peter Lowe's Blocklist",
-  "description": "Filter that blocks ads, trackers, and other nasty things.",
+  "description": "Blocklist with hostnames of ad and tracking servers",
   "homepage": "https://pgl.yoyo.org/adservers/",
   "sources": [
     {
