--- a/filters/general/filter_4_DanPollocksList/configuration.json
+++ b/filters/general/filter_4_DanPollocksList/configuration.json
@@ -1,6 +1,6 @@
 {
   "name": "Dan Pollock's List",
-  "description": "Blocks certain pop-up traps, prevents user tracking, blocks most advertising.",
+  "description": "List for blocking ads and preventing user tracking",
   "homepage": "https://someonewhocares.org/",
   "sources": [
     {
