--- a/filters/general/filter_5_OISD_Blocklist_Basic/configuration.json
+++ b/filters/general/filter_5_OISD_Blocklist_Basic/configuration.json
@@ -1,6 +1,6 @@
 {
   "name": "OISD Blocklist Basic",
-  "description": "Blocks ads/trackers and prioritizes functionality over blocking.",
+  "description": "List for blocking ads and trackers. Prioritizes functionality over blocking.",
   "homepage": "https://oisd.nl/",
   "sources": [
     {
