--- a/filters/other/filter_23_WindowsSpyBlocker/configuration.json
+++ b/filters/other/filter_23_WindowsSpyBlocker/configuration.json
@@ -1,6 +1,6 @@
 {
   "name": "WindowsSpyBlocker - Hosts spy rules",
-  "description": "Block spying and tracking on Windows.",
+  "description": "List for blocking spying and tracking on Windows",
   "homepage": "https://github.com/crazy-max/WindowsSpyBlocker",
   "sources": [
     {
