--- a/filters/other/filter_7_SmartTVBlocklist/configuration.json
+++ b/filters/other/filter_7_SmartTVBlocklist/configuration.json
@@ -1,6 +1,6 @@
 {
   "name": "Perflyst and Dandelion Sprout's Smart-TV Blocklist",
-  "description": "This is a blocklist to block smart-TVs sending metadata back home, sometimes with the added benefit of blocking interface ads for apps and movie services.",
+  "description": "List for preventing smart TVs from sending metadata to the vendor, and for blocking ads in apps and movie services",
   "homepage": "https://github.com/DandelionSprout/adfilt",
   "sources": [
     {
