--- a/filters/regional/filter_13_NOR_DandelionSproutsNordiskeFiltre/configuration.json
+++ b/filters/regional/filter_13_NOR_DandelionSproutsNordiskeFiltre/configuration.json
@@ -1,6 +1,6 @@
 {
   "name": "NOR: Dandelion Sprouts nordiske filtre",
-  "description": "Dandelion Sprout's Nordic Filters (for AdGuard Home, and for AdGuard for Android/Windows' DNS filtering).",
+  "description": "Dandelion Sprout's Nordic Filters (DNS filtering in AdGuard Home, AdGuard for Android, and AdGuard for Windows)",
   "homepage": "https://github.com/DandelionSprout/adfilt",
   "sources": [
     {
