--- a/filters/regional/filter_15_KOR_YousList/configuration.json
+++ b/filters/regional/filter_15_KOR_YousList/configuration.json
@@ -1,6 +1,6 @@
 {
   "name": "KOR: YousList",
-  "description": "Block filter for advertisements, mainly on Korean sites.",
+  "description": "List for blocking ads mainly on Korean websites",
   "homepage": "https://github.com/yous/YousList",
   "sources": [
     {
