--- a/filters/regional/filter_16_VNM_ABPVN/configuration.json
+++ b/filters/regional/filter_16_VNM_ABPVN/configuration.json
@@ -1,6 +1,6 @@
 {
   "name": "VNM: ABPVN List",
-  "description": "Adblock filter list for Vietnamese.",
+  "description": "List for blocking ads on Vietnamese websites",
   "homepage": "http://abpvn.com/",
   "sources": [
     {
