--- a/filters/regional/filter_17_SWE_FrellwitsSwedishHostsFile/configuration.json
+++ b/filters/regional/filter_17_SWE_FrellwitsSwedishHostsFile/configuration.json
@@ -1,6 +1,6 @@
 {
   "name": "SWE: Frellwit's Swedish Hosts File",
-  "description": "Aims to get rid of ads, tracking, scams & badware on (mostly) Swedish websites.",
+  "description": "List for blocking ads, tracking, scams & malware mainly on Swedish websites",
   "homepage": "https://github.com/lassekongo83/Frellwits-filter-lists/",
   "sources": [
     {
