--- a/filters/regional/filter_18_ITA_FiltriDNS/configuration.json
+++ b/filters/regional/filter_18_ITA_FiltriDNS/configuration.json
@@ -1,6 +1,6 @@
 {
   "name": "ITA: Filtri-DNS",
-  "description": "Tentative hosts file for Italian sites created from Easylist Italy and ADB X Files.",
+  "description": "List for blocking ads on Italian websites based on Easylist Italy and ADB X Files",
   "homepage": "https://filtri-dns.ga/",
   "sources": [
     {
