--- a/filters/regional/filter_19_IRN_UnwantedIranianDomains/configuration.json
+++ b/filters/regional/filter_19_IRN_UnwantedIranianDomains/configuration.json
@@ -1,6 +1,6 @@
 {
   "name": "IRN: Unwanted Iranian domains",
-  "description": "List of categorized undesired hosts.",
+  "description": "List of categorized undesired hosts",
   "homepage": "https://github.com/DRSDavidSoft/additional-hosts",
   "sources": [
     {
