--- a/filters/regional/filter_20_MKD_MacedonianPiHoleBlocklist/configuration.json
+++ b/filters/regional/filter_20_MKD_MacedonianPiHoleBlocklist/configuration.json
@@ -1,6 +1,6 @@
 {
   "name": "MKD: Macedonian Pi-hole Blocklist",
-  "description": "This is a list to block unwanted domains that serve ads on Macedonian websites.",
+  "description": "List for blocking ads on Macedonian websites",
   "homepage": "https://github.com/cchevy/macedonian-pi-hole-blocklist",
   "sources": [
     {
