--- a/filters/regional/filter_22_IDN_ABPindo/configuration.json
+++ b/filters/regional/filter_22_IDN_ABPindo/configuration.json
@@ -1,6 +1,6 @@
 {
   "name": "IDN: ABPindo",
-  "description": "ABPindo is an additional filter to complement EasyList to block annoying ads on Indonesian and Malaysian language sites.",
+  "description": "Filter complementary to EasyList for blocking ads on Indonesian and Malaysian websites",
   "homepage": "https://github.com/ABPindo/indonesianadblockrules",
   "sources": [
     {
