--- a/filters/regional/filter_25_KOR_List-KR/configuration.json
+++ b/filters/regional/filter_25_KOR_List-KR/configuration.json
@@ -1,6 +1,6 @@
 {
   "name": "KOR: List-KR DNS",
-  "description": "A DNS version of List-KR, a filter for websites in Korean language.",
+  "description": "A DNS version of List-KR, a filter for websites in the Korean language",
   "homepage": "https://github.com/List-KR/List-KR",
   "sources": [
     {
