--- a/filters/regional/filter_26_TUR_turk-adlist/configuration.json
+++ b/filters/regional/filter_26_TUR_turk-adlist/configuration.json
@@ -1,6 +1,6 @@
 {
   "name": "TUR: turk-adlist",
-  "description": "Ad servers list to block ads and annoying elements on Turkish sites.",
+  "description": "List for blocking ads and annoying elements on Turkish websites",
   "homepage": "https://github.com/bkrucarci/turk-adlist",
   "sources": [
     {
