--- a/filters/regional/filter_29_CHN_AdRules/configuration.json
+++ b/filters/regional/filter_29_CHN_AdRules/configuration.json
@@ -1,6 +1,6 @@
 {
   "name": "CHN: AdRules DNS List",
-  "description": "This is a list of advertising filters based on the Chinese area, achieving a relatively accurate advertising shield.",
+  "description": "List for blocking ads in the Chinese region",
   "homepage": "https://github.com/Cats-Team/AdRules",
   "sources": [
     {
