--- a/filters/security/filter_10_ScamBlocklistByDurableNapkin/configuration.json
+++ b/filters/security/filter_10_ScamBlocklistByDurableNapkin/configuration.json
@@ -1,6 +1,6 @@
 {
   "name": "Scam Blocklist by DurableNapkin",
-  "description": "A blocklist to protect users against untrustworthy sites.",
+  "description": "List for blocking untrustworthy websites",
   "homepage": "https://github.com/durablenapkin/scamblocklist",
   "sources": [
     {
