--- a/filters/security/filter_11_MaliciousURLBlocklist/configuration.json
+++ b/filters/security/filter_11_MaliciousURLBlocklist/configuration.json
@@ -1,6 +1,6 @@
 {
   "name": "Malicious URL Blocklist (URLHaus)",
-  "description": "A blocklist of malicious websites that are being used for malware distribution, based on the Database dump of Abuse.ch URLhaus.",
+  "description": "Blocklist of malicious websites based on the Database dump of Abuse.ch URLhaus",
   "homepage": "https://gitlab.com/malware-filter/urlhaus-filter",
   "sources": [
     {
