--- a/filters/security/filter_30_PhishingURLBlocklist/configuration.json
+++ b/filters/security/filter_30_PhishingURLBlocklist/configuration.json
@@ -1,6 +1,6 @@
 {
   "name": "Phishing URL Blocklist (PhishTank and OpenPhish)",
-  "description": "A blocklist of phishing websites, based on the PhishTank and OpenPhish lists.",
+  "description": "Blocklist of phishing websites, based on PhishTank and OpenPhish lists",
   "homepage": "https://gitlab.com/malware-filter/phishing-filter",
   "sources": [
     {
