--- a/filters/security/filter_8_NoCoin/configuration.json
+++ b/filters/security/filter_8_NoCoin/configuration.json
@@ -1,6 +1,6 @@
 {
   "name": "NoCoin Filter List",
-  "description": "This is an adblock list to block browser-based crypto mining.",
+  "description": "List for blocking browser-based crypto mining",
   "homepage": "https://github.com/hoshsadiq/adblock-nocoin-list/",
   "sources": [
     {
