--- a/filters/general/filter_1_DnsFilter/configuration.json
+++ b/filters/general/filter_1_DnsFilter/configuration.json
@@ -1,6 +1,6 @@
 {
   "name": "AdGuard DNS filter",
-  "description": "Filter composed from several other filters (English filter, Social media filter, Spyware filter, Mobile ads filter, EasyList and EasyPrivacy) and simplified specifically to be better compatible with DNS-level ad blocking.",
+  "description": "List composed of several filters (AdGuard Base filter, Social Media filter, Tracking Protection filter, Mobile Ads filter, EasyList and EasyPrivacy) and simplified specifically to be better compatible with DNS-level ad blocking",
   "homepage": "https://github.com/AdguardTeam/AdguardSDNSFilter",
   "sources": [
     {
