--- a/filters/general/filter_2_AdAwayDefaultFilter/configuration.json
+++ b/filters/general/filter_2_AdAwayDefaultFilter/configuration.json
@@ -1,6 +1,6 @@
 {
   "name": "AdAway Default Blocklist",
-  "description": "AdAway is an open source ad blocker for Android using the hosts file.",
+  "description": "Open-source ad blocker for Android using the hosts file",
   "homepage": "https://github.com/AdAway/adaway.github.io/",
   "sources": [
     {
