--- a/filters/other/filter_6_GameConsole/configuration.json
+++ b/filters/other/filter_6_GameConsole/configuration.json
@@ -1,6 +1,6 @@
 {
   "name": "Dandelion Sprout's Game Console Adblock List",
-  "description": "Much like there's now lists for AdGuard Home and Pi-hole to block ads on smart-TVs, here's an attempt from me at doing the same for videogame consoles with AdGuard Home.",
+  "description": "List for blocking ads on videogame consoles that use AdGuard Home",
   "homepage": "https://github.com/DandelionSprout/adfilt",
   "sources": [
     {
