--- a/filters/regional/filter_21_CHN_antiAD/configuration.json
+++ b/filters/regional/filter_21_CHN_antiAD/configuration.json
@@ -1,6 +1,6 @@
 {
   "name": "CHN: anti-AD",
-  "description": "Committed to being the highest hit rate ad filtering list in the Chinese region, achieving precise ad blocking and privacy protection.",
+  "description": "List for blocking ads in the Chinese region. Aims at privacy protection.",
   "homepage": "https://anti-ad.net/",
   "sources": [
     {
