--- a/filters/general/filter_24_1Hosts_Lite/configuration.json
+++ b/filters/general/filter_24_1Hosts_Lite/configuration.json
@@ -5,7 +5,7 @@
   "sources": [
     {
       "name": "1Hosts (Lite)",
-      "source": "https://badmojr.gitlab.io/1hosts/mini/adblock.txt",
+      "source": "https://badmojr.gitlab.io/1hosts/Lite/adblock.txt",
       "type": "adblock",
       "transformations": [
         "RemoveModifiers",
