--- a/filters/regional/filter_19_IRN_PersianBlocker/configuration.json
+++ b/filters/regional/filter_19_IRN_PersianBlocker/configuration.json
@@ -4,7 +4,7 @@
   "homepage": "https://github.com/MasterKia/PersianBlocker",
   "sources": [
     {
-      "name": "Unwanted Iranian domains",
+      "name": "PersianBlocker list",
       "source": "https://raw.githubusercontent.com/MasterKia/PersianBlocker/main/PersianBlockerHosts.txt",
       "type": "hosts",
       "transformations": [
